--- a/gfxpartner.com/Frolic/index.html
+++ b/gfxpartner.com/Frolic/index.html
@@ -715,9 +715,11 @@
                 <div class="review"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
                     class="fa fa-star"></i> <i class="fa fa-star"></i>
                   <h4>A truly amazing experience!</h4>
-                  <p>Amazing experience.</p>
+                  <p>One of the best places to book your travel.
+                    What they promise, they deliver. If you want to sort out your travel needs, you need to book from Safari Sutra. Hassle free booking experience, helpful staff, all queries would be answered.
+                    Booked from them and had a great vacation, from pick up to drop, everything was top notch. </p>
                   <figure><img src="images/guide04.png" alt="Image"></figure>
-                  <small>suryanarayan reddy</small>
+                  <small>Garima Gupta</small>
                 </div>
                 <!-- end review -->
               </div>
