--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 		<TR>
 			<TD BACKGROUND="fade.gif">
 				&middot;
-					<A HREF="gfxpartner.com/Frolic/index04b9.html">
+					<A HREF="gfxpartner.com/Frolic/index.html">
 						Frolic | for Tour Operators & Travel Agencies
 					</A>		
 			</TD>
