--- a/gfxpartner.com/Frolic/contact.html
+++ b/gfxpartner.com/Frolic/contact.html
@@ -55,74 +55,28 @@
 <!-- end search-box -->
 <header class="header-int">
   <div class="container">
-    <nav class="navbar"> <a href="index.html" class="navbar-brand"><img src="images/Packages/logo.png" alt="Image"></a>
-
-      <div class="menu-btn">
-        <div class="menu-circle-wrap">
-          <div class="wave"></div>
-          <svg class="menu-circle" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            preserveAspectRatio="xMidYMid" width="52" height="52" viewBox="0 0 52 52">
+    <nav class="navbar dark"> <a href="index.html" class="navbar-brand"><img src="images/Packages/logo.png" alt="Image"></a>
+        <div class="menu-btn">
+          <div class="menu-circle-wrap">
+            <div class="wave"></div>
+            <svg class="menu-circle" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="52" height="52" viewBox="0 0 52 52">
             <path d="M1,26a25,25 0 1,0 50,0a25,25 0 1,0 -50,0"></path>
-          </svg>
+            </svg> </div>
+          <div class="bars">
+            <div class="bar b1"></div>
+            <div class="bar b2"></div>
+            <div class="bar b3"></div>
+          </div>
         </div>
-        <div class="bars">
-          <div class="bar b1"></div>
-          <div class="bar b2"></div>
-          <div class="bar b3"></div>
-        </div>
-      </div>
-      <!-- end menu-btn -->
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown"><a class="nav-link" href="index.html">HOME</a>
-          <!--<ul class="dropdown-menu">
-            <li><a href="index-denmark.html">DENMARK</a></li>
-            <li><a href="index-norway.html">NORWAY</a></li>
-            <li><a href="index-finland.html">FINLAND</a></li>
-            <li><a href="index-sweden.html">SWEDEN</a></li>
-            <li><a href="index-iceland.html">ICELAND</a></li>
-          </ul>-->
-        </li>
-        <li class="nav-item dropdown"><a class="nav-link" href="about-us.html">ABOUT US</a>
-          <!--<ul class="dropdown-menu">
-            <li><a>TOUR</a>
-              <ul class="sub-dropdown-menu">
-                <li><a href="tours-grid.html">TOUR GRID</a></li>
-                <li><a href="tours-list.html">TOUR LIST</a></li>
-                <li><a href="tours-single.html">TOUR SINGLE</a></li>
-              </ul>
-            </li>
-            <li><a>ABOUT US</a>
-              <ul class="sub-dropdown-menu">
-                <li><a href="about-us.html">ABOUT US</a></li>
-                <li><a href="our-team.html">OUR TEAM</a></li>
-              </ul>
-            </li>
-            <li><a>BLOG</a>
-              <ul class="sub-dropdown-menu">
-                <li><a href="blog-grid.html">BLOG POST GRID</a></li>
-                <li><a href="blog-list.html">BLOG POST LIST</a></li>
-                <li><a href="blog-single.html">BLOG POST SINGLE</a></li>
-              </ul>
-            </li>
-          </ul>-->
-        </li>
-        <li class="nav-item dropdown"><a class="nav-link" href="">PACKAGES</a>
-          <!--<ul class="dropdown-menu">
-            <li><a href="attractions-4cols.html">FOUR COLUMNS</a></li>
-            <li><a href="attractions-3cols.html">THREE COLUMNS</a></li>
-            <li><a href="attractions-2cols.html">TWO COLUMNS</a></li>
-            <li><a href="attractions-single.html">SINGLE PAGE</a></li>
-          </ul>-->
-        </li>
-        <li class="nav-item dropdown"><a class="nav-link" href="blog-grid.html">BLOG</a>
-          <!--<ul class="dropdown-menu">
-            <li><a href="passengers.html">PASSGENGER</a></li>
-            <li><a href="booking.html">BOOKING</a></li>
-            <li><a href="summary.html">SUMMARY</a></li>
-            <li><a href="payment.html">PAYMENT</a></li>
-          </ul>-->
-        </li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
+        <!-- end menu-btn -->        <ul class="navbar-nav">
+          <li class="nav-item dropdown"><a class="nav-link" href="index.html">HOME</a>
+          </li>
+          <li class="nav-item dropdown"><a class="nav-link" href="about-us.html">ABOUT US</a>
+          </li>
+          <li class="nav-item dropdown"><a class="nav-link" href="packages.html">PACKAGES</a>
+          </li>
+          <li class="nav-item dropdown"><a class="nav-link" href="blog.html">BLOG</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
       </ul>
     </nav>
     <!-- end navbar -->
@@ -139,7 +93,6 @@
     <div class="row">
       <div class="col-12">
       <div class="section-title page-title">
-          <h2>Contact Us</h2>
       </div>
         <!-- end section-title -->
        </div>
@@ -204,45 +157,44 @@
       <div class="section-title">
           <h2>Reach Us Out</h2>
           <img src="images/title-seperator.png" alt="Image"> </div>
-        <p>Pellentesque vestibulum fermentum velit non placerat aecenas in hendrerit justo quisque quis rhoncus exeget semper semlam at lobortis velit. Vestibulum ante ipsum primis in faucibus orcie luctus et ultrices posuere cubilia curae ed dignissim leo lorema intum mauris vestibulum et maecenas vitae urna aced magna facilisis porttitor.</p>
        </div>
       <!-- end col-12 -->
       <div class="col-lg-3 col-md-6">
       	<div class="contact-box">
-      		<figure><img src="images/contact-icon1.png" alt="Image"></figure>
-      		<h5>MEDIA CONTACT</h5>
-      		<span><a href="#"><span class="__cf_email__" data-cfemail="731e16171a123315011c1f1a105d101c1e">[email&#160;protected]</span></a></span>
+      		<figure><img src="images/Packages/location.png" alt="Image"></figure>
+      		<h5>ADDRESS</h5>
+        <span> WeWork Chromium Jogeshwari Link Road, Powai, Mumbai, Maharashtra, India</span>
       	</div>
       	<!-- end contact-box -->
       </div>
       <!-- end col-3 -->
       <div class="col-lg-3 col-md-6">
       	<div class="contact-box">
-      		<figure><img src="images/contact-icon2.png" alt="Image"></figure>
+      		<figure><img src="images/Packages/mail.png" alt="Image"></figure>
       		<h5>SUPPORT CONTACT</h5>
-      		<span><a href="#"><span class="__cf_email__" data-cfemail="f685838686998482b69084999a9f95d895999b">[email&#160;protected]</span></a></span>
+      		<span><p>hello@thesafarisutra.com<br>sales@thesafarisutra.com</p></span>
       	</div>
       	<!-- end contact-box -->
       </div>
       <!-- end col-3 -->
       <div class="col-lg-3 col-md-6">
       	<div class="contact-box">
-      		<figure><img src="images/contact-icon3.png" alt="Image"></figure>
+      		<figure><img src="images/Packages/telephone.png" alt="Image"></figure>
       		<h5>PHONE</h5>
-      		<span>+123 456 7890</span>
+      		<span>9967572970<br>+919429690981 </span>
       	</div>
       	<!-- end contact-box -->
       </div>
       <!-- end col-3 -->
       <div class="col-lg-3 col-md-6">
       	<div class="contact-box no-border">
-      		<figure><img src="images/contact-icon4.png" alt="Image"></figure>
+      		<figure><img src="images/Packages/square.png" alt="Image"></figure>
       		<h5>SOCIAL</h5>
 			<ul>
-				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-				<li><a href="#"><i class="fa fa-tripadvisor"></i></a></li>
+        <li><a href="https://x.com/SafariSutra"><i class="fa fa-tripadvisor"></i></a></li>
+        <li><a href="https://www.instagram.com/safarisutra/"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://www.linkedin.com/company/103599001/"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=61560936836457"><i class="fa fa-facebook"></i></a></li>
 			</ul>
       	</div>
       	<!-- end contact-box -->
@@ -256,140 +208,17 @@
   <!-- end content -->
 </section>
 <!-- end contact -->
-<section class="our-offices">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6">
-      	<div class="office-box">
-      		<figure><img src="images/office01.jpg" alt="Image"></figure>
-      		<div class="office-content">
-      			<h5>FROLIC INC.</h5>
-      			<address>
-              GFXPARTNER INC.<br>
-              30 Aarhus, Denmark<br>
-              Phone: 123 456 7890<br>
-        <a href="#"><span class="__cf_email__" data-cfemail="9ff6f1f9f0dff8f9e7effeedebf1faedb1fcf0f2">[email&#160;protected]</span></a>
-        </address>
-      		</div>
-      		<!-- end office-content -->
-      	</div>
-      	<!-- end office-box -->
-      </div>
-      <!-- end col-6 -->
-      <div class="col-lg-6">
-      	<div class="office-box">
-      		<figure><img src="images/office02.jpg" alt="Image"></figure>
-      		<div class="office-content">
-      			<h5>FROLIC INC.</h5>
-      			<address>
-              GFXPARTNER INC.<br>
-              30 Aarhus, Germany<br>
-              Phone: 123 456 7890<br>
-        <a href="#"><span class="__cf_email__" data-cfemail="e48d8a828ba483829c948596908a8196ca878b89">[email&#160;protected]</span></a>
-        </address>
-      		</div>
-      		<!-- end office-content -->
-      	</div>
-      	<!-- end office-box -->
-      </div>
-      <!-- end col-6 -->
-      <div class="col-lg-6">
-      	<div class="office-box">
-      		<figure><img src="images/office03.jpg" alt="Image"></figure>
-      		<div class="office-content">
-      			<h5>FROLIC INC.</h5>
-      			<address>
-              GFXPARTNER INC.<br>
-              30 Aarhus, France<br>
-              Phone: 123 456 7890<br>
-        <a href="#"><span class="__cf_email__" data-cfemail="ddb4b3bbb29dbabba5adbcafa9b3b8aff3beb2b0">[email&#160;protected]</span></a>
-        </address>
-      		</div>
-      		<!-- end office-content -->
-      	</div>
-      	<!-- end office-box -->
-      </div>
-      <!-- end col-6 -->
-      <div class="col-lg-6">
-      	<div class="office-box">
-      		<figure><img src="images/office04.jpg" alt="Image"></figure>
-      		<div class="office-content">
-      			<h5>FROLIC INC.</h5>
-      			<address>
-              GFXPARTNER INC.<br>
-              30 Aarhus, Iceland<br>
-              Phone: 123 456 7890<br>
-        <a href="#"><span class="__cf_email__" data-cfemail="076e6961684760617f776675736962752964686a">[email&#160;protected]</span></a>
-        </address>
-      		</div>
-      		<!-- end office-content -->
-      	</div>
-      	<!-- end office-box -->
-      </div>
-      <!-- end col-6 -->
-    </div>
-    <!-- end row -->
-  </div>
-  <!-- end container -->
-</section>
-<!-- end our-offices -->
-<section class="contact-form">
-	<div class="container">
-    <div class="row justify-content-center">
-      <div class="col-12 text-center">
-      <div class="section-title">
-      	<h2>Write Us a Message</h2>
-      	<img src="images/title-seperator.png" alt="Image">
-      </div>
-      <!-- end section-title -->
-      </div>
-      <!-- end col-12 -->
-      <div class="col-lg-8 col-md-10">
-      	<form class="row">
-      		<div class="form-group col-md-6">
-      			<input type="text" placeholder="Full name">
-      		</div>
-      		<!-- end form-group -->
-      		<div class="form-group col-md-6">
-      			<input type="text" placeholder="Email Adress">
-      		</div>
-      		<!-- end form-group -->
-      		<div class="form-group col-md-6">
-      			<input type="text" placeholder="Phone">
-      		</div>
-      		<!-- end form-group -->
-      		<div class="form-group col-md-6">
-      			<input type="text" placeholder="Subject">
-      		</div>
-      		<!-- end form-group -->
-      		<div class="form-group col-12">
-				<textarea placeholder="Your Message"></textarea>
-      		</div>
-      		<!-- end form-group -->
-      		<div class="form-group col-12 text-center">
-				<button type="submit">SEND MESSAGE</button>
-      		</div>
-      		<!-- end form-group -->
-      	</form>
-      </div>
-      <!-- end col-8 -->
-    </div>
-    <!-- end row -->
-  </div>
-  <!-- end container -->
-</section>
-<!-- end contact-form -->
 <footer class="footer">
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-md-4">
         <h5>ABOUT US</h5>
         <ul class="footer-menu">
-          <li><a href="#">Homes</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Packages</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="index.html">Homes</a></li>
+            <li><a href="about-us.html">About us</a></li>
+            <li><a href="packages.html">Packages</a></li>
+            <!-- <li><a href="blog">Blog</a></li> -->
+            <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <!-- end col-3 -->
