--- a/gfxpartner.com/Frolic/index.html
+++ b/gfxpartner.com/Frolic/index.html
@@ -208,12 +208,6 @@
 </head>
 
 <body>
-  <div class="preloader">
-    <svg class="spinner" viewBox="0 0 50 50">
-      <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
-    </svg>
-  </div>
-  <!-- end preloader -->
   <div class="search-box">
     <div class="container">
       <div class="row">
@@ -263,54 +257,12 @@
         <!-- end menu-btn -->
         <ul class="navbar-nav">
           <li class="nav-item dropdown"><a class="nav-link" href="index.html">HOME</a>
-            <!--<ul class="dropdown-menu">
-              <li><a href="index-denmark.html">DENMARK</a></li>
-              <li><a href="index-norway.html">NORWAY</a></li>
-              <li><a href="index-finland.html">FINLAND</a></li>
-              <li><a href="index-sweden.html">SWEDEN</a></li>
-              <li><a href="index-iceland.html">ICELAND</a></li>
-            </ul>-->
           </li>
           <li class="nav-item dropdown"><a class="nav-link" href="about-us.html">ABOUT US</a>
-            <!--<ul class="dropdown-menu">
-              <li><a>TOUR</a>
-                <ul class="sub-dropdown-menu">
-                  <li><a href="tours-grid.html">TOUR GRID</a></li>
-                  <li><a href="tours-list.html">TOUR LIST</a></li>
-                  <li><a href="tours-single.html">TOUR SINGLE</a></li>
-                </ul>
-              </li>
-              <li><a>ABOUT US</a>
-                <ul class="sub-dropdown-menu">
-                  <li><a href="about-us.html">ABOUT US</a></li>
-                  <li><a href="our-team.html">OUR TEAM</a></li>
-                </ul>
-              </li>
-              <li><a>BLOG</a>
-                <ul class="sub-dropdown-menu">
-                  <li><a href="blog-grid.html">BLOG POST GRID</a></li>
-                  <li><a href="blog-list.html">BLOG POST LIST</a></li>
-                  <li><a href="blog-single.html">BLOG POST SINGLE</a></li>
-                </ul>
-              </li>
-            </ul>-->
           </li>
-          <li class="nav-item dropdown"><a class="nav-link" href="">PACKAGES</a>
-            <!--<ul class="dropdown-menu">
-              <li><a href="attractions-4cols.html">FOUR COLUMNS</a></li>
-              <li><a href="attractions-3cols.html">THREE COLUMNS</a></li>
-              <li><a href="attractions-2cols.html">TWO COLUMNS</a></li>
-              <li><a href="attractions-single.html">SINGLE PAGE</a></li>
-            </ul>-->
+          <li class="nav-item dropdown"><a class="nav-link" href="packages.html">PACKAGES</a>
           </li>
-          <li class="nav-item dropdown"><a class="nav-link" href="blog-grid.html">BLOG</a>
-            <!--<ul class="dropdown-menu">
-              <li><a href="passengers.html">PASSGENGER</a></li>
-              <li><a href="booking.html">BOOKING</a></li>
-              <li><a href="summary.html">SUMMARY</a></li>
-              <li><a href="payment.html">PAYMENT</a></li>
-            </ul>-->
-          </li>
+          <li class="nav-item dropdown"><a class="nav-link" href="blog.html">BLOG</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
         </ul>
       </nav>
@@ -857,11 +809,11 @@
         <div class="col-lg-4 col-md-4">
           <h5>ABOUT US</h5>
           <ul class="footer-menu">
-            <li><a href="#">Homes</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Packages</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Homes</a></li>
+            <li><a href="about-us.html">About us</a></li>
+            <li><a href="packages.html">Packages</a></li>
+            <!-- <li><a href="blog">Blog</a></li> -->
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <!-- end col-3 -->
