adjust font size in CSS and add dropdown menu for exclusive and curated packages in navigation

--- a/gfxpartner.com/Frolic/about-us.html
+++ b/gfxpartner.com/Frolic/about-us.html
@@ -188,7 +188,10 @@
           <li class="nav-item dropdown"><a class="nav-link" href="about-us.html">ABOUT US</a>
           </li>
           <li class="nav-item dropdown"><a class="nav-link" href="packages.html">PACKAGES</a>
-          </li>
+            <ul class="dropdown-menu">
+              <li><a href="packages.html">EXCLUSIVE PACKAGES</a></li>
+              <li><a href="curatedpackages.html">CURATED PACKAGES</a></li>
+            </ul>
           <li class="nav-item dropdown"><a class="nav-link" href="blog.html">BLOG</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
       </ul>
