update links in Frolic index.html to improve navigation and accessibility

--- a/gfxpartner.com/Frolic/index.html
+++ b/gfxpartner.com/Frolic/index.html
@@ -338,7 +338,7 @@
       <p>
         At Safari Sutra Holidays, we believe Goa is more than just beaches and parties—it's a hidden treasure of culture, adventure, and tranquility. Founded in 2014 by a group of passionate travelers, we created "Chalo Goa" to reveal the Goa that locals love—secret waterfalls, ancient temples, untouched beaches, and the rich Indo-Portuguese heritage. From solo explorers to families, we've helped thousands uncover the true essence of Goa through authentic, curated experiences. 🌴✨
       </p>
-      <a href="#" class="btn">More About Us</a>
+      <a href="about-us.html" class="btn">More About Us</a>
     </div>
     <div class="image">
       <img src="images/Packages/about.jpg" alt="Goa Scenery">
@@ -380,7 +380,7 @@
                   <div> <img src="images/icon-tag.png" alt="Image"> <small>FROM</small> <span>$166.750</span> </div>
                 </li>
               </ul> -->
-              <a href="tours-single.html">EXPLORE MORE</a>
+              <a href="packages.html">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -405,7 +405,7 @@
                   <div> <img src="images/icon-tag.png" alt="Image"> <small>FROM</small> <span>$166.750</span> </div>
                 </li>
               </ul> -->
-              <a href="tours-single.html">EXPLORE MORE</a>
+              <a href="packages.html">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -430,7 +430,7 @@
                   <div> <img src="images/icon-tag.png" alt="Image"> <small>FROM</small> <span>$166.750</span> </div>
                 </li>
               </ul> -->
-              <a href="tours-single.html">EXPLORE MORE</a>
+              <a href="packages.html">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -455,7 +455,7 @@
                   <div> <img src="images/icon-tag.png" alt="Image"> <small>FROM</small> <span>$166.750</span> </div>
                 </li>
               </ul> -->
-              <a href="tours-single.html">EXPLORE MORE</a>
+              <a href="packages.html">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -480,7 +480,7 @@
                   <div> <img src="images/icon-tag.png" alt="Image"> <small>FROM</small> <span>$166.750</span> </div>
                 </li>
               </ul> -->
-              <a href="tours-single.html">EXPLORE MORE</a>
+              <a href="packages.html">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -505,7 +505,7 @@
                   <div> <img src="images/icon-tag.png" alt="Image"> <small>FROM</small> <span>$166.750</span> </div>
                 </li>
               </ul> -->
-              <a href="tours-single.html">EXPLORE MORE</a>
+              <a href="packages.html">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -570,7 +570,7 @@
           <div class="swiper-carousel">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <a href="attractions-single.html">
+                <a href="curatedpackages.html">
                   <figure class="activity-box"> <img src="images/Packages/northgoa.jpg" alt="Image">
                     <figcaption>NORTH GOA PACKAGES</figcaption>
                   </figure>
@@ -578,7 +578,7 @@
               </div>
               <!-- end swiper-slide -->
               <div class="swiper-slide">
-                <a href="attractions-single.html">
+                <a href="curatedpackages.html">
                   <figure class="activity-box"> <img src="images/Packages/southgoa.jpg" alt="Image">
                     <figcaption>SOUTH GOA PACKAGES</figcaption>
                   </figure>
@@ -586,7 +586,7 @@
               </div>
               <!-- end swiper-slide -->
               <div class="swiper-slide">
-                <a href="attractions-single.html">
+                <a href="curatedpackages.html">
                   <figure class="activity-box"> <img src="images/Packages/eastgoa.jpg" alt="Image">
                     <figcaption>EAST GOA PACKAGES
                     </figcaption>
@@ -595,7 +595,7 @@
               </div>
               <!-- end swiper-slide -->
               <div class="swiper-slide">
-                <a href="attractions-single.html">
+                <a href="curatedpackages.html">
                   <figure class="activity-box"> <img src="images/Packages/beach.jpg" alt="Image">
                     <figcaption>BEACH-SPECIFIC PACKAGES</figcaption>
                   </figure>
