add story section to about us page and adjust paragraph height in CSS

--- a/gfxpartner.com/Frolic/about-us.html
+++ b/gfxpartner.com/Frolic/about-us.html
@@ -29,6 +29,51 @@
       text-align: center;
     }
 
+    .story-section {
+  padding: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.story-container {
+  display: flex;
+  align-items: flex-start;
+  gap: 40px;
+}
+
+.story-image img {
+  width: 350px; /* Smaller image width */
+  height: auto;
+  border-radius: 12px;
+  object-fit: cover;
+  flex: 1;
+}
+
+.story-content {
+  flex: 2;
+}
+
+.story-content h5 {
+  font-size: 14px;
+  letter-spacing: 1px;
+  color: #555;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+
+.story-content h2 {
+  font-size: 40px;
+  margin-bottom: 15px;
+  color: #222;
+}
+
+.story-content p {
+  font-size: 18px;
+  line-height: 1.6;
+  color: #444;
+  margin-bottom: 15px;
+}
+
     .title {
       font-size: 60px;
       color: #333;
@@ -222,6 +267,24 @@
   <!-- end about-us -->
 
   <!-- end about-us-video -->
+
+  <section class="story-section">
+    <div class="story-container">
+      <div class="story-image">
+        <img src="images/Packages/aboutstory.jpg" alt="Sunset at Goa Beach" />
+      </div>
+      <div class="story-content">
+        <h5>OUR STORY</h5>
+        <h2>Where Passion Meets Paradise</h2>
+        <p>
+          Safari Sutra Holidays began with a simple belief: that Goa is more than just beaches and parties—it's a complex tapestry of culture, adventure, tranquility, and natural wonder waiting to be experienced authentically.</p>
+<p>Our journey began when a group of travel enthusiasts from diverse backgrounds found themselves repeatedly returning to Goa, each time discovering new facets of this coastal paradise that tourists rarely experience. We realized that while millions visit Goa each year, few truly connect with its soul—the hidden waterfalls accessible only by forest trails, ancient temples nestled in village communities, pristine beaches unmarked on tourist maps, and the rich Indo-Portuguese heritage that flavors every aspect of Goan life.</p>
+<p>In 2014, Safari Sutra Holidays was born from this realization, and our signature brand "Chalo Goa" emerged as our promise to unveil the authentic Goa experience. The name "Safari Sutra" reflects our philosophy—"Safari" representing the journey of discovery, and "Sutra" embodying the thread that connects travelers to meaningful experiences.</p>
+<p>What began as curated adventure tours for friends soon expanded into a comprehensive travel service as word spread about our unique approach. Today, we take pride in having helped thousands of travelers—from solo adventurers to honeymooners to multi-generational families—discover the Goa that locals cherish.</p>
+        
+      </div>
+    </div>
+  </section>
 
   <section class="core-values">
     <h2 class="title">OUR VALUES</h2>
